--- a/home.html
+++ b/home.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>universal-links</title>
+<meta property="og:image" content="https://my.asiacell.com/resources/images/main-tmp/ic_roaming_abroad.png">
+	
 <style type="text/css">
 body {
   font-family: Helvetica, arial, sans-serif;
