--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Beats by Dr. Dre Solo2 Wireless Headphones - Apple</title>
+<title>Headphones - Apple</title>
 <meta property="og:description" content="Beats by Dr. Dre Solo2 Wireless Headphones let you take your music anywhere you go. Get fast, free shipping when you buy online.">
 <meta property="og:image" content="https://my.asiacell.com/resources/images/main-tmp/ic_roaming_abroad.png">
 	
